<resources>
    <string name="app_name">Salife</string>
    <string name="Search">Search</string>
    <string name="trip_demo">Sai Gon - Da Lat</string>
    <string name="Driver">Driver</string>
    <string name="Trip_demo">Sai Gon - Nha Trang 1/9/2016</string>
    <string name="drawer_open">Open menu</string>
    <string name="drawer_close">Close menu</string>
    <string name="Review">View</string>
    <string name="Book_trip">Book trip</string>
    <string name="NMT">Nguyen Minh Tri</string>
    <string name="filter">Filter</string>
    <string name="Star">Star</string>
    <string name="Client">Group</string>
    <string name="Please_choose_another">Please choose another.</string>
    <string name="all">All</string>
    <string name="Mark">Point</string>
    <string name="demo_price">190.000đ / ticket</string>
    <string name="demo_chair">Reclining 40 seats</string>
    <string name="Leave_comment">Leave the comment here&#8230;</string>
    <string name="Send">Send</string>
    <string name="Rating">Rating</string>
    <string name="Intro_rating_screen">You have finished the trip. Please give us your feedback.</string>

    <string name="Group_1">Viet Khue</string>
    <string name="Group_2">Hotelic</string>
    <string name="Group_3">Hoa Cuc</string>
    <string name="Depart">Depart:</string>
    <string name="Phone">Phone number</string>
    <string name="Receiver_name">Receiver name</string>
    <string name="Confirm">Confirm</string>
    <string name="Book_successful">Thank for your booking .We will contact you as soon</string>
    <string name="No_blank">Please input information</string>
    <string name="No_ticket">Ticket Quantity</string>
    <string name="Please_check_network">Please check network connection</string>
</resources>
