<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/book_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/tv_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:layout_gravity="center_horizontal"
            android:hint="@string/Receiver_name"/>
        <EditText
            android:id="@+id/tv_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:inputType="phone"
            android:layout_gravity="center_horizontal"
            android:layout_below="@+id/tv_name"
            android:hint="@string/Phone"/>
        <TextView
            android:id="@+id/tv_book"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/tv_phone"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_marginRight="16dp"
            android:text="@string/Confirm"
            android:textSize="16sp"
            android:textAllCaps="true"
            android:gravity="right"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold"/>
    </RelativeLayout>

</LinearLayout>