<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/img_ava"
            android:layout_width="185dp"
            android:layout_height="190dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/user_5"/>

        <TextView
            android:id="@+id/tv_title"
            android:textColor="@color/black"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:layout_below="@id/img_ava"
            android:text="@string/NMT" />

        <LinearLayout
            android:id="@+id/rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/tv_title"
            android:layout_centerInParent="true"
            android:layout_marginTop="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/star1"
                android:layout_width="0dp"
                android:layout_height="56dp"
                android:layout_weight="1"
                android:adjustViewBounds="true"
                android:paddingBottom="16dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_star_orange_border" />

            <ImageView
                android:id="@+id/star2"
                android:layout_width="34dp"
                android:layout_height="56dp"
                android:adjustViewBounds="true"
                android:paddingBottom="16dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="16dp"
                android:scaleType="centerInside"
                android:src="@drawable/ic_star_orange_border" />

            <ImageView
                android:id="@+id/star3"
                android:layout_width="34dp"
                android:layout_height="56dp"
                android:adjustViewBounds="true"
                android:paddingBottom="16dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_star_orange_border"/>

            <ImageView
                android:id="@+id/star4"
                android:layout_width="34dp"
                android:layout_height="56dp"
                android:adjustViewBounds="true"
                android:paddingBottom="16dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_star_orange_border" />

            <ImageView
                android:id="@+id/star5"
                android:layout_width="34dp"
                android:layout_height="56dp"
                android:adjustViewBounds="true"
                android:paddingBottom="16dp"
                android:paddingLeft="5dp"
                android:paddingRight="5dp"
                android:paddingTop="16dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_star_orange_border" />

        </LinearLayout>

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rating"
            android:hint="@string/Leave_comment"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:textColor="@color/black"/>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_send"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_alignParentBottom="true"
        android:foreground="?attr/selectableItemBackground"
        android:background="@drawable/btn_orange"
        android:text="@string/Send"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:textSize="21sp"/>

</RelativeLayout>