<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:clickable="true"
    app:cardPreventCornerOverlap="false"
    android:foreground="?android:attr/selectableItemBackground"
    app:cardCornerRadius="5dp"
    app:cardElevation="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/img_ava"
            android:layout_width="100dp"
            android:layout_height="215dp"
            android:src="@drawable/user_1"
            android:scaleType="centerCrop"/>
        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/img_ava"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:text="Name"
            android:textStyle="bold"
            android:textSize="21sp"/>
        <TextView
            android:id="@+id/tv_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/img_ava"
            android:layout_below="@+id/tv_name"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:text="Group"
            android:textSize="18sp"/>
        <LinearLayout
            android:id="@+id/group_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="5dp"
            android:layout_toRightOf="@+id/img_ava"
            android:layout_below="@+id/tv_group"
            android:layout_marginLeft="16dp">

            <ImageView
                android:id="@+id/starS1"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:src="@mipmap/green_star"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/starS2"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:src="@mipmap/green_star"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/starS3"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:src="@mipmap/green_star"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/starS4"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:src="@mipmap/green_star"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/starS5"
                android:layout_width="21dp"
                android:layout_height="21dp"
                android:src="@mipmap/green_star"
                android:visibility="invisible"/>

        </LinearLayout>
        <TextView
            android:id="@+id/tv_chair"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/img_ava"
            android:layout_below="@+id/group_rating"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/demo_chair"
            android:textSize="16sp"/>
        <TextView
            android:id="@+id/tv_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@+id/img_ava"
            android:layout_below="@+id/tv_chair"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/demo_price"
            android:textSize="16sp"/>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_alignBottom="@+id/img_ava"
            android:layout_toRightOf="@+id/img_ava"
            android:layout_marginLeft="16dp"
            android:layout_marginBottom="10dp">

            <ImageView
                android:id="@+id/star1"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/orange_star"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/star2"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/orange_star"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/star3"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/orange_star"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/star4"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/orange_star"
                android:visibility="invisible"/>
            <ImageView
                android:id="@+id/star5"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@mipmap/orange_star"
                android:visibility="invisible"/>

        </LinearLayout>
        <TextView
            android:id="@+id/tv_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/img_ava"
            android:layout_alignParentRight="true"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="16dp"
            android:text="@string/Review"
            android:textColor="@color/colorAccent"
            android:textSize="21sp"
            android:textAllCaps="true"/>
    </RelativeLayout>

</android.support.v7.widget.CardView>